refactor: изменить в InMemoryHistoryManager ArrayList на LinkedList